--- a/TG.RMSCLIENT.WEB/Views/Home/Index2.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index2.cshtml
@@ -12,6 +12,7 @@
 
 <!-- END SCROLL TOP BUTTON -->
 <!-- Start header section -->
+
 <!-- End header section -->
 <!-- Start slider  -->
 <section id="mu-slider">
@@ -20,7 +21,7 @@
         <div class="mu-top-slider">
             <!-- Top slider single slide -->
             <div class="mu-top-slider-single">
-                <img src="~/assets/img/slider/1.jpeg" alt="img">
+                <img src="~/assets/img/slider/1.jpeg" alt="img">               
                 <!-- Top slider content -->
                 <div class="mu-top-slider-content">
                     <span class="mu-slider-small-title">Welcome</span>
@@ -196,11 +197,11 @@
                     </div>
                     <div class="mu-restaurant-menu-content">
                         <ul class="nav nav-tabs mu-restaurant-menu">
-                            <li class="active"><a href="#" data-toggle="tab">Breakfast</a></li>
+                            <li class="active"><a href="#breakfast" data-toggle="tab">Breakfast</a></li>
                             <li><a href="#meals" data-toggle="tab">Meals</a></li>
                             <li><a href="#snacks" data-toggle="tab">Snacks</a></li>
                             <li><a href="#desserts" data-toggle="tab">Desserts</a></li>
-                            <li><a href="#drinks" data-toggle="tab">Drinks</a></li>                            
+                            <li><a href="#drinks" data-toggle="tab">Drinks</a></li>
                         </ul>
 
                         <!-- Tab panes -->
@@ -741,7 +742,7 @@
                         <script src="~/assets/PageScript/CommonScript/mainfunction.js"></script>
                         <script src="~/assets/PageScript/CommonScript/SSRL.STYLE.js"></script>
                         <script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>
-
+                        
                         <script src="~/JavascriptFile/PageScript/Booking.js"></script>
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quidem autem iusto, perspiciatis, amet, quaerat blanditiis ducimus eius recusandae nisi aut totam alias consectetur et.</p>
@@ -766,24 +767,24 @@
                                         </select>
                                     </div>
                                 </div>
-
+                               
                                 @*<div class="col-md-6">
-                                        <div class="form-group">
-                                            <select class="form-control">
-                                                <option value="0">How Many?</option>
-                                                <option value="1 Person">1 Person</option>
-                                                <option value="2 People">2 People</option>
-                                                <option value="3 People">3 People</option>
-                                                <option value="4 People">4 People</option>
-                                                <option value="5 People">5 People</option>
-                                                <option value="6 People">6 People</option>
-                                                <option value="7 People">7 People</option>
-                                                <option value="8 People">8 People</option>
-                                                <option value="9 People">9 People</option>
-                                                <option value="10 People">10 People</option>
-                                            </select>
-                                        </div>
-                                    </div>*@
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option value="0">How Many?</option>
+                                            <option value="1 Person">1 Person</option>
+                                            <option value="2 People">2 People</option>
+                                            <option value="3 People">3 People</option>
+                                            <option value="4 People">4 People</option>
+                                            <option value="5 People">5 People</option>
+                                            <option value="6 People">6 People</option>
+                                            <option value="7 People">7 People</option>
+                                            <option value="8 People">8 People</option>
+                                            <option value="9 People">9 People</option>
+                                            <option value="10 People">10 People</option>
+                                        </select>
+                                    </div>
+                                </div>*@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="StartTime" name="StartTime" id="StartTime" readonly="readonly">
@@ -814,7 +815,7 @@
                                         <input type="text" class="form-control" placeholder="Contact" name="Contact" id="Contact" required>
                                     </div>
                                 </div>
-
+                                
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <textarea class="form-control" cols="30" rows="10" placeholder="Your Message" name="Remark" id="Remark"></textarea>
@@ -1402,18 +1403,69 @@
         </div>
     </div>
 </section>
+<!-- End Contact section -->
+<!--Arup-->
 
+
+
+@*<section id="mu-arup">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="mu-about-us-area">
+                    <div class="mu-title">
+                        <span class="mu-subtitle">Discover</span>
+                        <h2>Arup Chowdhury</h2>
+                        <i class="fa fa-spoon"></i>
+                        <span class="mu-title-bar"></span>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="mu-about-us-left">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid, itaque illum assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus, libero enim odio quo. Explicabo ex sapiente sit eligendi, facere voluptatum! Quia vero rerum sunt porro architecto corrupti eaque corporis eum, enim soluta, perferendis dignissimos, repellendus, beatae laboriosam.</p>
+                                <ul>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
+                                </ul>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique molestias est quod reprehenderit, quibusdam nam qui, quam magnam. Ex.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="mu-about-us-right">
+                                <ul class="mu-abtus-slider">
+                                    <li><img src="assets/img/about-us/abtus-img-1.png" alt="img"></li>
+                                    <li><img src="assets/img/about-us/abtus-img-2.png" alt="img"></li>
+                                    <li><img src="assets/img/about-us/abtus-img-6.png" alt="img"></li>
+                                    <li><img src="assets/img/about-us/abtus-img-4.png" alt="img"></li>
+                                    <li><img src="assets/img/about-us/abtus-img-5.png" alt="img"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>*@
 
 <section>
     <video width="100%" height="100%" autoplay="" loop="" muted="" poster="img/poster.jpg">
+        @*<source src="videos/render-img.mp4" type="video/mp4">*@
         <source src="~/assets/videos/render-img.mp4" type="video/mp4" />
-    </video>
 
+
+        @*<source src="videos/render-img.ogg" type="video/ogg">*@
+    </video>
+    
 </section>
 <section id="mu-map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d760807.7995949016!2d11.954496755808002!3d41.85186150977206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13258a111bd74ac3%3A0x3094f9ab2388100!2sMetropolitan+City+of+Rome%2C+Italy!5e0!3m2!1sen!2sbd!4v1489256150192" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-
+    
+   
 </section>
 
 <!--End Arup-->
