--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
@@ -13,6 +13,7 @@
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="~/assets/css/bootstrap.css" rel="stylesheet">
+    
     <!-- Slick slider -->
     <link rel="stylesheet" type="text/css" href="~/assets/css/slick.css">
     <!-- Date Picker -->
@@ -21,15 +22,20 @@
     <!-- Theme color -->
     <link id="switcher" href="~/assets/css/theme-color/default-theme.css" rel="stylesheet">
     <script src="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/src/js/bootstrap-datetimepicker.js"></script>
-
+    
     @* ------------------Script library---------------- *@
     @*<script src="~/Scripts/js/jquery-1.11.0.min.js"></script>*@
     <script src="~/assets/js/jquery.min.js"></script>
     <script src="~/JavascriptFile/js/i18n/grid.locale-en.js"></script>
     <script src="~/JavascriptFile/js/jquery.jqGrid.min.js"></script>
-    @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
+    <link href="~/assets/css/bootstrap.css" rel="stylesheet" />
+   @* <link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
     <link href="~/JavascriptFile/css/ui.jqgrid-bootstrap.css" rel="stylesheet" />
-    <script src="~/JavascriptFile/bootstrap.min.js"></script>
+    <script src="~/assets/js/bootstrap.js"></script>
+   @* <script src="~/JavascriptFile/bootstrap.min.js"></script>*@
+    <script src="~/assets/ModalJS/run_prettify.js"></script>
+    <link href="~/assets/ModalCS/bootstrap-dialog.css" rel="stylesheet" />
+    <script src="~/assets/ModalJS/bootstrap-dialog.js"></script>
     @* ----------------------------------------------- *@
     <script src="~/assets/PageScript/CommonScript/mainfunction.js"></script>
     <script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>
