Dynamic Tab Menu Category added

--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -183,6 +183,7 @@
     </div>
 </section>
 <!-- End Counter Section -->
+<script src="~/JavascriptFile/PageScript/HomeMenu.js"></script>
 <!-- Start Restaurant Menu -->
 <section id="mu-restaurant-menu">
     <div class="container">
@@ -196,12 +197,12 @@
                         <span class="mu-title-bar"></span>
                     </div>
                     <div class="mu-restaurant-menu-content">
-                        <ul class="nav nav-tabs mu-restaurant-menu">
-                            <li class="active"><a href="#breakfast" data-toggle="tab">Breakfast</a></li>
+                        <ul class="nav nav-tabs mu-restaurant-menu" id="ul">
+                            @*<li class="active"><a href="#breakfast" data-toggle="tab">Breakfast</a></li>
                             <li><a href="#meals" data-toggle="tab">Meals</a></li>
                             <li><a href="#snacks" data-toggle="tab">Snacks</a></li>
                             <li><a href="#desserts" data-toggle="tab">Desserts</a></li>
-                            <li><a href="#drinks" data-toggle="tab">Drinks</a></li>
+                            <li><a href="#drinks" data-toggle="tab">Drinks</a></li>*@
                         </ul>
 
                         <!-- Tab panes -->
