--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -1348,6 +1348,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="mu-contact-area">
+
                     <div class="mu-title">
                         <span class="mu-subtitle">Get In Touch</span>
                         <h2>Contact Us</h2>
@@ -1356,51 +1357,68 @@
                     </div>
                     <div class="mu-contact-content">
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="mu-contact-left">
-                                    <form class="mu-contact-form">
+                            @*Contact with Rating*@
+                            <form class="mu-contact-form" id="fContact">
+                                <div class="col-md-6">
+                                    <div class="mu-contact-left">
+                                        @*<form class="mu-contact-form" id="fContact">*@
                                         <div class="form-group">
                                             <label for="name">Your Name</label>
-                                            <input type="text" class="form-control" id="name" placeholder="Name">
+                                            <input type="text" class="form-control" id="Name" name="Name" placeholder="Name">
                                         </div>
                                         <div class="form-group">
                                             <label for="email">Email address</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Email">
+                                            <input type="email" class="form-control" id="EmailId" name="EmailId" placeholder="Email">
                                         </div>
                                         <div class="form-group">
+                                            <label for="email">Phone</label>
+                                            <input type="text" class="form-control" id="Phone" name="Phone" placeholder="Phone">
+                                        </div>
+
+                                        <div class="form-group">
                                             <label for="subject">Subject</label>
-                                            <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                            <input type="text" class="form-control" id="Subject" name="Subject" placeholder="Subject">
                                         </div>
                                         <div class="form-group">
                                             <label for="message">Message</label>
-                                            <textarea class="form-control" id="message" cols="30" rows="10" placeholder="Type Your Message"></textarea>
+                                            <textarea class="form-control" id="Message" name="Message" cols="30" rows="10" placeholder="Type Your Message"></textarea>
                                         </div>
                                         <button type="submit" class="mu-send-btn">Send Message</button>
-                                    </form>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="mu-contact-right">
-                                    <div class="mu-contact-widget">
-                                        <h3>Office Address</h3>
-                                        <p>**************************, ********************    ************************************,*********************************************.</p>
-                                        <address>
-                                            <p><i class="fa fa-phone"></i> 880**************</p>
-                                            <p><i class="fa fa-envelope-o"></i>xxxxx@xxxxx.com</p>
-                                            <p><i class="fa fa-map-marker"></i>xxx xxxxx xxxxxx, xxxxxxxx, xxxxxx</p>
-                                        </address>
-                                    </div>
-                                    <div class="mu-contact-widget">
-                                        <h3>Open Hours</h3>
-                                        <address>
-                                            <p><span>Monday - Friday</span> 9.00 am to 12 pm</p>
-                                            <p><span>Saturday</span> 9.00 am to 10 pm</p>
-                                            <p><span>Sunday</span> 10.00 am to 12 pm</p>
-                                        </address>
+
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                                <div class="col-md-6">
+                                    <div class="mu-contact-right">
+                                        <div class="mu-contact-widget">
+                                            <h3>Rate Us</h3>
+                                            <div class="col-md-2 form-group">
+                                                @*<input type="checkbox" class="" name="IsAdmin" id="IsAdmin"> <span style="color: #444"> Admin</span>*@
+                                                @Html.CheckBox("Star1", new { @id = "Star1" })
+                                            </div>
+                                            <div class="col-md-2 form-group">
+                                                @*<input type="checkbox" class="" name="IsActive" id="IsActive"> <span style="color: #444"> Active</span>*@
+                                                @Html.CheckBox("Star2", new { @id = "Star2" })
+                                            </div>
+                                            <div class="col-md-2 form-group">
+                                                @*<input type="checkbox" class="" name="IsActive" id="IsActive"> <span style="color: #444"> Active</span>*@
+                                                @Html.CheckBox("Star3", new { @id = "Star3" })
+                                            </div>
+                                            <div class="col-md-2 form-group">
+                                                @*<input type="checkbox" class="" name="IsActive" id="IsActive"> <span style="color: #444"> Active</span>*@
+                                                @Html.CheckBox("Star4", new { @id = "Star4" })
+                                            </div>
+                                            <div class="col-md-2 form-group">
+                                                @*<input type="checkbox" class="" name="IsActive" id="IsActive"> <span style="color: #444"> Active</span>*@
+                                                @Html.CheckBox("Star5", new { @id = "Star5" })
+                                            </div>
+                                        </div>
+                                        <div class="mu-contact-widget">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+</div>
                     </div>
                 </div>
             </div>
