--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -206,8 +206,8 @@
                         </ul>
 
                         <!-- Tab panes -->
-                        <div class="tab-content">
-                            <div class="tab-pane fade in active" id="breakfast">
+                        <div class="tab-content" id="tabMenuDetails">
+                            @*<div class="tab-pane fade in active" id="breakfast">
                                 <div class="mu-tab-content-area">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -716,7 +716,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
