--- a/TG.RMSCLIENT.WEB/Views/FoodMenuCategoryWise/FoodMenuCategoryWise.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/FoodMenuCategoryWise/FoodMenuCategoryWise.cshtml
@@ -10,6 +10,7 @@
         $('.navbar-admin').css({ 'background-color': '#444', 'padding': '10px 0' })
     })
 </script>
+<script src="~/JavascriptFile/PageScript/SubMenuCategoryWise.js"></script>
 
 <section id="mu-restaurant-menu">
     <div class="container">
