--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -117,6 +117,18 @@
      
     <div id="fade" style="height: 768px;z-index:900;opacity:5; display:none" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center"></div>
     <div id="modal" class="center-div"><img id="loader" src="~/image/ajax-loader1.gif" /><br>Please wait..</div>
+
+    <section>
+        <div class="alert alert-warning" id="warning" style="display: none; margin-left: 0px; max-height: 100px;min-height:80px; border-top: solid thin #ccc; bottom: 0; width: 100%; position: fixed; z-index: 900; padding: 2px 0 2px 1px">
+            <strong>Warning!</strong> @*Password and Confirm Password must be same.*@<span></span>
+        </div>
+        <div class="alert alert-success" id="success" style="display: none; margin-left: 0px; max-height: 100px;min-height:80px; border-top: solid thin #ccc; bottom: 0; width: 100%; position: fixed; z-index: 900; padding: 2px 0 2px 1px">
+            <strong>Information!</strong> Saved successfully.
+        </div>
+        <div class="alert alert-danger" id="error" style="display: none; margin-left: 0px; max-height: 100px;min-height:80px; border-top: solid thin #ccc; bottom: 0; width: 100%; position: fixed; z-index: 900; padding: 2px 0 2px 1px">
+            <strong>Danger!</strong> Error saving.
+        </div>
+    </section>
     
     <!-- Start Map section -->
    
