--- a/TG.RMSCLIENT.WEB/Views/FoodMenuCategoryWise/FoodMenuCategoryWise.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/FoodMenuCategoryWise/FoodMenuCategoryWise.cshtml
@@ -3,13 +3,11 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
-<script src="~/assets/js/jquery.min.js"></script>
-<script type="text/javascript">
-    $(function () {
 
-        $('.navbar-admin').css({ 'background-color': '#444', 'padding': '10px 0' })
-    })
-</script>
+<script src="~/assets/js/jquery.min.js"></script>
+<script src="~/assets/PageScript/CommonScript/mainfunction.js"></script>
+<script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>
+<script src="~/assets/PageScript/CommonScript/SSRL.STYLE.js"></script>
 <script src="~/JavascriptFile/PageScript/SubMenuCategoryWise.js"></script>
 
 <section id="mu-restaurant-menu">
@@ -24,12 +22,13 @@
                         <span class="mu-title-bar"></span>
                     </div>
                     <div class="mu-restaurant-menu-content">
-                        <ul class="nav nav-tabs mu-restaurant-menu" id="ul">
-                            <li class="active"><a href="#breakfast" data-toggle="tab">Breakfast</a></li>
+                        <input type="hidden" value="@ViewBag.categoryName" id="categoryName" />
+                        <ul class=" nav nav-tabs mu-restaurant-menu" id="ul">
+                            @*<li class="active"><a href="#breakfast" data-toggle="tab">Breakfast</a></li>
                                 <li><a href="#meals" data-toggle="tab">Meals</a></li>
                                 <li><a href="#snacks" data-toggle="tab">Snacks</a></li>
                                 <li><a href="#desserts" data-toggle="tab">Desserts</a></li>
-                                <li><a href="#drinks" data-toggle="tab">Drinks</a></li>
+                                <li><a href="#drinks" data-toggle="tab">Drinks</a></li>*@
                         </ul>
 
                         
