--- a/TG.RMSCLIENT.WEB/Views/FoodMenuCategoryWise/FoodMenuCategoryWise.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/FoodMenuCategoryWise/FoodMenuCategoryWise.cshtml
@@ -33,7 +33,7 @@
 
                         
                         <div class="tab-content" id="tabMenuDetails">
-                            <div class="tab-pane fade in active" id="breakfast">
+                            @*<div class="tab-pane fade in active" id="breakfast">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-6">
@@ -542,7 +542,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>*@
                         </div>
                     </div>
                 </div>
