--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -311,10 +311,10 @@
                         <span class="mu-title-bar"></span>
                     </div>
                     <div class="mu-gallery-content">
-
+                        <script src="~/JavascriptFile/PageScript/GallaryItem.js"></script>
                         <!-- Start gallery image -->
-                        <div class="mu-gallery-body">
-                            <!-- start single gallery image -->
+                        <div class="mu-gallery-body" id="gallaryItem">
+                            @*<!-- start single gallery image -->
                             <div class="mu-single-gallery col-md-4">
                                 <div class="mu-single-gallery-item">
                                     <figure class="mu-single-gallery-img">
@@ -502,7 +502,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- End single gallery image -->
+                            <!-- End single gallery image -->*@
                         </div>
                     </div>
                 </div>
